--- a/rmd/Group-1-RMD-Final-Report.Rmd
+++ b/rmd/Group-1-RMD-Final-Report.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Classification of Spotify Data"
+title: "Uncovering the Secrets of Song Success: A Statistical Analysis of Popular Spotify Music"
 subtitle: "DATA 606 - W2023 Final Project"
 author: "Kane Smith, Rodrigo Rosales Alvarez, Arhur Trim, Jordan Keelan, Scott Bennett"
 date: "`r format(Sys.time(), '%Y-%m-%d')`"
@@ -17,7 +17,7 @@ output:
 ```{r setup, include=FALSE}
 # Set R Chunk options
 knitr::opts_chunk$set(echo = TRUE)
-knitr::opts_chunk$set(fig.width=6, fig.height=4)
+# knitr::opts_chunk$set(fig.width=6, fig.height=4)
 
 # Set the number of significant digits
 options(scipen=50, digits=4)
@@ -43,7 +43,9 @@ library(stringr)
 
 Spotify is the world’s most popular subscription service for audio streaming. Spotify claims 489 million users, of which 205 million users are Spotify Premium subscribers(1). Spotify has an extensive library of music tracks and gathers data about the music in order to better recommend songs to users, and makes this data available through a web API(2). By analyzing this data, we hope to gain insights into how characteristics of different songs and the artists who created them affect the popularity of the songs. We also aim to explore other trends and relationships within the data, such as whether we can predict the genre of a song based on characteristics such as loudness and musical key. This analysis could potentially be used to identify what factors make songs popular and help artists create music that will be commercially successful (if that is their goal). It may also expose other findings that would be interesting to a general audience of music consumers.
 
-## 1.2 Objective & Topic Importance
+## 1.2 Problem & Topic Importance
+
+The music industry is in a constant state of evolution, and the popularity of a song can play a significant role in an artist's success. With an abundance of music being produced and released, it can be challenging to predict which songs will achieve popularity. Considering this environment, there is a growing need for a more scientifically informed understanding of the factors that contribute to a song's popularity. Although virality cannot always be predicted, it can be influenced, and record labels and streaming services can benefit greatly from affiliation with viral hits. By understanding the factors that contribute to popularity and identifying them in new songs and artists, they can make informed decisions on music production and marketing strategies.
 
 ## 1.3 Data Source
 
@@ -81,7 +83,31 @@ tracks_df <- data.frame(read.csv("../spotify_dataset/tracks.csv"))
 ```
 
 
-## 2.4 Data Cleaning
+## 1.5 Problem Statement
+
+The music industry is in a constant state of evolution, and the popularity of a song can play a significant role in an artist's success. With an abundance of music being produced and released, it can be challenging to predict which songs will achieve popularity. Considering this environment, there is a growing need for a more scientifically informed understanding of the factors that contribute to a song's popularity. Although virality cannot always be predicted, it can be influenced, and record labels and streaming services can benefit greatly from affiliation with viral hits. By understanding the factors that contribute to popularity and identifying them in new songs and artists, they can make informed decisions on music production and marketing strategies.
+
+“Data is becoming a primary way for labels and other tastemakers to find their next stars. Shav Garg is the co-founder of Indify, a company he calls a “music data platform.” Music pros use his company to figure out who the next hot artists are, and they were extremely early in noticing artists like Khalid, who the company first featured in the fall of 2015, nearly a year and a half before his debut album.” (SETARO, S.)
+
+As data becomes an increasingly crucial tool in the music industry, many music producers and musicians are adopting a formulaic approach to music design. By breaking down successful or unsuccessful songs into their fundamental elements and analyzing patterns influencing listener emotions, they can leverage these findings in the creation of novel music. Understanding these song features and how they contribute to popularity can help artists stay ahead of musical trends and create more impactful music.
+
+This project's purpose is to analyze the features of songs (as listed in the “Summary of Variables” section above) and to develop multiple statistical models to determine the relevance of these features to a song's popularity. This analysis will provide valuable insights into the music industry and inform artists, music producers, and industry professionals on how to make informed decisions to increase the popularity of their music.
+
+
+# 2 Preliminary Analyses
+
+## 2.1 Data Cleaning 
+
+The dataset was already very clean when it was downloaded, but we still did validation to ensure that everything was good before we began an exploratory analysis and modeling. We started by looking for counts of NAs and duplicate values which there were none. Next, we checked the dimensions of our data frame; there are 22 variables and 529,958 rows. 
+
+The most important part of cleaning the data was changing variables that were meant to be factors (explicit, key, mode, time_signature) as factors instead of integers. The other important was to normalize our continuous features using mean normalization to potentially improve the performance of our models and to allow us to use linear discriminant analysis. 
+
+## 2.2 Visual Investigation
+
+### bar-plot
+
+### histogram
+
 ```{r histograms}
 # head(artists_df) somthing here has characters that latex cant print
 # head(tracks_df)
@@ -117,9 +143,11 @@ tracks_pop_scaled
 #artists_pop_filtered
 ```
 
-## 2.5 Data Exploration
-
 ### Correlation Matrix
+
+### Plots by Year and by Decade
+
+To explore how the some of the variables in the dataset vary between different musical eras, we generated bar charts of the mean popularity, acoustic-ness, energy level, and song duration for each decade in the dataset by simplifying the ‘date_published’ value to a decade label. These plots show that newer music is generally more popular than older music, particularly music from decades before 1950. It also shows that the length of songs has stayed fairly steady over time, while the musical energy level has increased somewhat and the degree of acoustic instrumentation has decreased.
  
 ```{r}
 dim(tracks_df)
@@ -211,7 +239,6 @@ ggcorrplot(cor_matrix,
 ### Popularity and Hit Boxplots
 
 To begin investigating the idea that *popularity* could be related to features which describe the character of the music, it would be useful to do some preliminary visual exploration of those features. 
-
 Two of the available "factor" variables (*key* and *explicit*) can be analyzed using boxplots:
 
 ```{r boxplots of factors}
@@ -223,26 +250,30 @@ grid.arrange(box1, box2, ncol = 2, top="Boxplots of Categorical Factors vs. Popu
 ```
 It can be seen that the interquartile range of "popularity" appears to be different for songs flagged as explicit. For the song "key", there may be differences but they are not as obvious in this visual. 
 
-In addition to predicting popularity as an integer, another objective is to predict if a song is a "hit" or not (i.e., predict if the song's popularity will be in the top quartile). To begin investigating this idea visually, we first classified a track as "hit" or "no_hit" based on being in the top quartile of popularity. Once this is done, we can produce boxplots of "hit" or "no_hit" for different features such as *loudness* and *danceability*:
+In addition to predicting the numerical value of popularity, another opportunity is to predict if a song is a "hit" or not (i.e., predict if the song's popularity will be in the top quartile). By framing in the problem this binary way, we will have an opportunity to investigate more potential models (such as logistiic regression). Additionally, some people might find more meaning in a clear simple, classification such as "hit" and "no hit".
+
+To begin investigating "hit" and "no hit" visually, we first classified a tracks in the top quartile of popularity as "hit", and other songs and "no hit". From here, we produced boxplots of "hit" or "no_hit" for different features such as *loudness* and *danceability*:
 
 ```{r boxplots of hit or no}
 
-quant_pop <- tracks_df %>%
+quart_pop <- tracks_df %>%
               mutate(quartile = factor(ntile(popularity, 4)), 
                      hit = case_when(quartile == 4 ~"hit", TRUE~"no_hit"))
 
-box1 <- ggplot(data = quant_pop, aes(x=hit, y=loudness, fill=hit)) + geom_boxplot() 
-box2 <- ggplot(data = quant_pop, aes(x=hit, y=danceability, fill=hit)) + geom_boxplot()
-box3 <- ggplot(data = quant_pop, aes(x=hit, y=tempo, fill=hit)) + geom_boxplot()
-box4 <- ggplot(data = quant_pop, aes(x=hit, y=valence, fill=hit)) + geom_boxplot()
-box5 <- ggplot(data = quant_pop, aes(x=hit, y=energy, fill=hit)) + geom_boxplot()
-box6 <- ggplot(data = quant_pop, aes(x=hit, y=liveness, fill=hit)) + geom_boxplot()
+box1 <- ggplot(data = quart_pop, aes(x=hit, y=loudness, fill=hit)) + geom_boxplot() 
+box2 <- ggplot(data = quart_pop, aes(x=hit, y=danceability, fill=hit)) + geom_boxplot()
+box3 <- ggplot(data = quart_pop, aes(x=hit, y=tempo, fill=hit)) + geom_boxplot()
+box4 <- ggplot(data = quart_pop, aes(x=hit, y=valence, fill=hit)) + geom_boxplot()
+box5 <- ggplot(data = quart_pop, aes(x=hit, y=energy, fill=hit)) + geom_boxplot()
+box6 <- ggplot(data = quart_pop, aes(x=hit, y=liveness, fill=hit)) + geom_boxplot()
 
 
 grid.arrange(box1, box2, box3, box4, box5, box6, ncol = 3, top="Boxplots of Features vs. Hit")
 ```
 
 At least visually it appears that some of these features could be useful in predicting which tracks are a hit. For example, the mean of "loudness" and "energy" appear to be higher for "hit" than "no_hit". On the other hand, some of these features don't seem to have such an obvious relationship in this visual; the means and interquartile ranges for the tempo plot do not appear to be so different between "hit" and "no hit". 
+
+
 
 # Sampling
 To build some of our models, we decided to use random sampling to devide the data into training and testing sets. 
@@ -257,8 +288,10 @@ train = popular_df2[idx,]
 test = popular_df2[-idx,]
 ```
 
+# 3 Classification of Target Variable - Hit or Not?
 
-# 3.2 Popularity Classification
+As we have stated, the dependent variable that we are using to assess if a song will be classified as a hit is “popularity,” a score from 0 to 100 that ranks how popular an artist is relative to other artists on the platform. To use this variable in classification problems, we decided to code it, “1” means that the song is a hit, “0” indicates that the song is not a hit; the threshold used to make the division was the 75th percentile in the popularity column, everything below the 75th percentile is considered “not hit”, the rest is considered a “hit”.
+
 
 ```{r}
 popular_df2 <- popular_df2 %>% mutate(popularity_coded = ifelse(popularity >= quantile(popular_df2$popularity, c(.75))[1], 1, 0))
@@ -270,7 +303,7 @@ popular_df2$popularity_coded <- as.factor(popular_df2$popularity_coded)
 ctrl <- trainControl(method = "cv", number = 10)
 ```
 
-## 4.1 LDA
+## 3.1 LDA
 ```{r}
 #fit a regression model and use k-fold CV to evaluate performance
 lda_model <- train(popularity_coded~duration_ms+explicit+danceability+energy+key+loudness+mode+speechiness+acousticness+instrumentalness+liveness+valence+tempo+time_signature, data=popular_df2, method = "lda", trControl = ctrl)
@@ -279,7 +312,7 @@ print(lda_model)
 ```
 
 
-### 4.1.1 Assumptions
+### 3.1.1 LDA Assumptions
 
 Multivariate Normality - mulri.norm Test
 
@@ -315,7 +348,7 @@ leveneTest(popularity~., data = popular_sample2)
 ```
 
 
-## 4.2 Logistic Regression
+## 3.2 Logistic Regression
 
 ```{r}
 #fit a regression model and use k-fold CV to evaluate performance
@@ -324,7 +357,7 @@ lr_model <- train(popularity_coded ~ duration_ms+explicit+danceability+energy+ke
 summary(lr_model)
 ```
 
-### 4.2.1 Assumptions
+### 3.2.1 Logistic Regression Assumptions
 
 Absence of Multicolinearity - Variance Inflation Factor
 
@@ -343,7 +376,86 @@ Lack of Influential Outliers - Cook's Distance
 popular_df[cooks.distance(model_fit)>1,]
 ```
 
-## 4.3 Classification Tree
+## 3.3 Classification Tree
+
+To compare to the previous classification models, a classification tree was also built with the same predictor varaibles. As with the other models, training was done with 80% of data, and testing with the remaining 20%. 
+
+```{r}
+set.seed(1)
+
+N <- nrow(popular_df2)
+n <- N * 0.8
+
+idx = sample(1:N, size=n, replace = FALSE)
+train = popular_df2[idx,]
+test = popular_df2[-idx,]
+```
+
+The classification tree was build as shown in the code below:
+
+```{r classification tree}
+
+tree.class <- tree(popularity_coded ~ duration_ms+explicit+danceability+energy+key+loudness+mode+speechiness+acousticness+instrumentalness+liveness+valence+tempo+time_signature, data = train)
+summary(tree.class)
+
+plot(tree.class)
+text(tree.class, cex=1.5, col="black")
+```
+As shown in the plot, the tree produced with default setting was very simple. It contained only 3 terminal nodes and only used "loudness" and "explicit" to perform the classification. The misclassification rate was determined with the 20% test data as shown below:
+
+```{r classification tree misclass}
+tree.pred <- predict(tree.class, test, type = "class")
+
+tab <- table(tree.pred, test$popularity_coded)
+tab
+
+mis = 1 - sum(diag(tab)) / sum(tab)
+mis
+```
+The misclassification rate was found to be 0.285. Since the tree was already very small, it was not expected that pruning would be necessary. Still, we confirmed this using cross-validation to choose tree complexity. The chart shown below confirms the suspicion that 3 terminal nodes is optimal for this case; reducing terminal nodes would reduce model performance.
+
+```{r classification tree cv tree complexity}
+cv.class = cv.tree(tree.class)
+plot(cv.class$size, cv.class$dev, type='b', cex.main=1.5, cex.lab=1.5, cex.axis=1.5)
+```
+
+Now that the tree complexity has been determined, we used 10 k fold cross-validation to determine the mean misclassification. To perform this cross-validation, 10 folds were produced which were stratified on "hit" or "no hit" i.e, "popularity_coded". 
+
+```{r classificaiton tree k-fold cross}
+
+set.seed(10)
+strat_folds <- createFolds(factor(popular_df2$popularity_coded), k=10)
+
+for (i in 1:10){
+
+idx <- strat_folds[[i]]
+fold <- popular_df2[idx,]
+# print(table(fold$popularity_coded))
+  
+}
+
+
+mis_tree <- function(idx){
+  Train <- popular_df2[-idx,]
+  Test <- popular_df2[idx,]
+  tree.class <- tree(popularity_coded ~ duration_ms+explicit+danceability+energy+key+loudness+mode+speechiness+acousticness+instrumentalness+liveness+valence+tempo+time_signature, data = Train)
+  tree_hat <- predict(tree.class, Test, type = "class")
+  
+  tab <- table(tree_hat, Test$popularity_coded)
+  print(tab)
+  
+  misclass = 1 - sum(diag(tab)) / sum(tab)
+  print(misclass)
+  return(misclass)
+
+}
+
+misclass_tree = lapply(strat_folds, mis_tree)
+
+"The mean misclassification:"
+mean(as.numeric(misclass_tree))
+```
+The results of the 10 k-fold cross validation echoed the results of the training set. The mean misclassification was 0.2474. This is a higher misclassification than the the logisitic regression model, and therefore the classification tree is not recommended. 
 
 ```{r}
 tree_model_class <- train(popularity_coded ~ duration_ms+explicit+danceability+energy+key+loudness+mode+speechiness+acousticness+instrumentalness+liveness+valence+tempo+time_signature, data = popular_df2, trControl = ctrl, method = "rpart")
@@ -351,7 +463,12 @@ tree_model_class <- train(popularity_coded ~ duration_ms+explicit+danceability+e
 print(tree_model_class)
 ```
 
-### 4.3.1 Assumptions
+```{r}
+plot(tree_model_class)
+```
+
+
+### 3.3.1 Classification Tree Assumptions
 
 For tree methods, we do not have any assumptions to test besides our observations being independent of each other, which they are.
 
@@ -394,13 +511,13 @@ print(tree_model_reg)
 
 
 
-### 4.4.1 Assumptions
+### 3.4.1 Assumptions
 
 For tree methods, we do not have any assumptions to test besides our observations being independant of each other, which they are.
 
 
 
-## 4.5 Summary of Findings
+## 4 Summary of Findings
 
 # 5 Conclusion
 
